<resources>
    <string name="app_name">Popular Movies</string>

    <string name="action_settings">Settings</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_share">Share</string>

    <string name="title_activity_movie_detail">Movie Detail</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="title_activity_detail_movie_info">DetailMovieInfo</string>
    <string name="title_activity_movie_fragment">MovieFragment</string>
    <string name="api_image_size_default" translatable="false">w185</string>


    <!-- Labels for the Movies sort setting option  -->
    <string name="sort_movie_label">Sort Movies </string>
    <string name="sort_popular_movie_label">Popular movies</string>
    <string name="sort_toprated_movie_label">Top rated movies</string>
    <string name="sort_favorites_movie_label">Favorites</string>

    <string name="sort_movies_key">sortby</string>

    <string name="sort_movie_popular" translatable="false">popular</string>
    <string name="sort_movie_top_rated" translatable="false">top_rated</string>
    <string name="sort_movie_favorites" translatable="false">favorites</string>


    <!-- Labels to display Trailers and Reviews  as a list  -->
    <string name="movie_trailer_label">Trailers: </string>
    <string name="movie_overview_label">Overview: </string>
    <string name="movie_review_label">Reviews: </string>
    <string name="movie_no_trailer_found">No trailers found </string>
    <string name="movie_no_reviews_found">No reviews found </string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">popularmovies2.example.com</string>
    <string name="content_authority">com.example.caroline.popularmovies2.app</string>


    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notification</string>
    <string name="pref_enable_notifications_label">Popular movies Notifications</string>
    <string name="pref_enable_notifications_false">Don\'t show notifications</string>
    <string name="pref_enable__notifications_true">Show notifications</string>
    <string name="pref_last_notification">last_notification</string>

    <!-- Notification Format -->
    <string name="format_notification">Touch for an updated list of popular movies.\!</string>


</resources>




